--- a/dionysus-client/yo/package.json
+++ b/dionysus-client/yo/package.json
@@ -2,6 +2,7 @@
   "name": "dionysus-client",
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
+    "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-concurrent": "^0.5.0",
