--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -21,7 +21,6 @@
 				<version>0.4</version>
 				<executions>
 					<execution>
-					  <phase>compile</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
@@ -43,6 +42,9 @@
 						<goals>
 							<goal>single</goal>
 						</goals>
+						<configuration>
+						  <yo.test.skip>true</yo.test.skip>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
