--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -21,6 +21,7 @@
 				<version>0.4</version>
 				<executions>
 					<execution>
+					  <phase>generate-resources</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
