--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -19,6 +19,9 @@
 				<groupId>com.github.trecloux</groupId>
 				<artifactId>yeoman-maven-plugin</artifactId>
 				<version>0.4</version>
+				<configuration>
+				  <skipTests>true</skipTests>
+				</configuration>
 				<executions>
 					<execution>
 					  <phase>generate-resources</phase>
