--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
+
 jdk:
   - openjdk7
 
-install:
+before_install:
   - npm install -g grunt-cli
   - npm install -g bower
+
+install: mvn clean install
