--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -24,7 +24,7 @@
 				</configuration>
 				<executions>
 					<execution>
-					  <phase>generate-resources</phase>
+					  <phase>compile</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
