--- a/dionysus-admin/pom.xml
+++ b/dionysus-admin/pom.xml
@@ -20,6 +20,10 @@
       <artifactId>dionysus-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>org.lightadmin</groupId>
 			<artifactId>lightadmin</artifactId>
