--- a/dionysus-client/yo/package.json
+++ b/dionysus-client/yo/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.0",
+    "grunt-contrib-jade": "^0.14.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.5.1",
