--- a/dionysus-bae/pom.xml
+++ b/dionysus-bae/pom.xml
@@ -48,5 +48,30 @@
 			<artifactId>baev3-sdk</artifactId>
 			<version>1.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.6</version>       
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.1</version>       
+        </dependency>
+        <dependency>
+	         <groupId>net.sf.flexjson</groupId>
+	         <artifactId>flexjson</artifactId>
+	         <version>2.1</version> 
+        </dependency>
 	</dependencies>
 </project>
