--- a/dionysus-bae/pom.xml
+++ b/dionysus-bae/pom.xml
@@ -32,15 +32,19 @@
 	</repositories>
 
 	<dependencies>
-    <dependency>
-      <groupId>com.huixinpn.dionysus</groupId>
-      <artifactId>dionysus-core</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.huixinpn.dionysus</groupId>
+			<artifactId>dionysus-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.baidu</groupId>
 			<artifactId>bcs-sdk</artifactId>
