--- a/dionysus-core/pom.xml
+++ b/dionysus-core/pom.xml
@@ -37,6 +37,10 @@
 			<artifactId>joda-time</artifactId>
 		</dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
