--- a/dionysus-client/yo/package.json
+++ b/dionysus-client/yo/package.json
@@ -19,7 +19,6 @@
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha": "^0.4.10",
-    "grunt-modernizr": "^0.5.2",
     "grunt-newer": "^0.7.0",
     "grunt-rev": "^0.1.0",
     "grunt-svgmin": "^0.4.0",
@@ -27,6 +26,7 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.4.0",
     "load-grunt-tasks": "^0.4.0",
+    "semantic-ui-less": "^1.11.6",
     "time-grunt": "^0.4.0"
   },
   "engines": {
