--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -7,6 +7,7 @@
     "sockjs": "~0.3.4",
     "stomp-websocket": "~2.3.4",
     "froala": "~1.2.6",
-    "semantic-ui": "~1.11.6"
+    "semantic-ui": "~1.11.6",
+    "backbone.picky": "~0.2.0"
   }
 }
