--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -4,11 +4,10 @@
   "dependencies": {
     "marionette": "~2.3.2",
     "backbone.intercept": "~0.3.2",
+    "backbone.select": "~1.3.0",
     "sockjs": "~0.3.4",
     "stomp-websocket": "~2.3.4",
     "froala": "~1.2.6",
-    "semantic-ui": "~1.11.6",
-    "backbone.picky": "~0.2.0",
-    "backbone.select": "~1.3.0"
+    "semantic-ui": "~1.11.6"
   }
 }
